--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.27.1",
     "react-native-gifted-chat": "^2.8.1",
+    "react-native-image-picker": "^8.2.1",
     "react-native-keep-awake": "^4.0.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-keyboard-controller": "^1.17.5",
