--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,3 +1,4 @@
+use_frameworks! :linkage => :static # add this line for firebase push notification
 # Resolve react_native_pods.rb with node to allow for hoisting
 require Pod::Executable.execute_command('node', ['-p',
   'require.resolve(
@@ -17,6 +18,21 @@ end
 target 'GroupTravel' do
   config = use_native_modules!
 
+
+  # $RNFirebaseAsStaticFramework = true # add this line for firebase push notification
+
+  # Enable modular headers for problematic Firebase dependencies
+  # pod 'Firebase', :modular_headers => true
+  # pod 'GoogleUtilities', :modular_headers => true
+  # pod 'leveldb-library', :modular_headers => true
+  # pod 'FirebaseCore', :modular_headers => true
+  # pod 'FirebaseAppCheckInterop', :modular_headers => true
+  # pod 'FirebaseCoreExtension', :modular_headers => true
+  # pod 'FirebaseFirestoreInternal', :modular_headers => true
+  # pod 'FirebaseAuthInterop', :modular_headers => true
+  # pod 'FirebaseCoreInternal', :modular_headers => true
+  # pod 'FirebaseStorage', :modular_headers => true
+
   use_react_native!(
     :path => config[:reactNativePath],
     # An absolute path to your application root.
@@ -31,5 +47,6 @@ target 'GroupTravel' do
       :mac_catalyst_enabled => false,
       # :ccache_enabled => true
     )
-  end
+
+end
 end
