--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,52 +1,50 @@
-use_frameworks! :linkage => :static # add this line for firebase push notification
+
+use_frameworks! :linkage => :static
+ 
 # Resolve react_native_pods.rb with node to allow for hoisting
 require Pod::Executable.execute_command('node', ['-p',
   'require.resolve(
     "react-native/scripts/react_native_pods.rb",
     {paths: [process.argv[1]]},
   )', __dir__]).strip
-
+ 
+# Require react-native-permissions setup script
+require Pod::Executable.execute_command('node', ['-p',
+  'require.resolve(
+    "react-native-permissions/scripts/setup.rb",
+    {paths: [process.argv[1]]},
+  )', __dir__]).strip
+ 
 platform :ios, min_ios_version_supported
+project 'GroupTravel.xcodeproj'  # ✅ <-- Add this line
 prepare_react_native_project!
-
+ 
 linkage = ENV['USE_FRAMEWORKS']
 if linkage != nil
   Pod::UI.puts "Configuring Pod with #{linkage}ally linked Frameworks".green
   use_frameworks! :linkage => linkage.to_sym
 end
-
+ 
 target 'GroupTravel' do
   config = use_native_modules!
 
-
-  # $RNFirebaseAsStaticFramework = true # add this line for firebase push notification
-
-  # Enable modular headers for problematic Firebase dependencies
-  # pod 'Firebase', :modular_headers => true
-  # pod 'GoogleUtilities', :modular_headers => true
-  # pod 'leveldb-library', :modular_headers => true
-  # pod 'FirebaseCore', :modular_headers => true
-  # pod 'FirebaseAppCheckInterop', :modular_headers => true
-  # pod 'FirebaseCoreExtension', :modular_headers => true
-  # pod 'FirebaseFirestoreInternal', :modular_headers => true
-  # pod 'FirebaseAuthInterop', :modular_headers => true
-  # pod 'FirebaseCoreInternal', :modular_headers => true
-  # pod 'FirebaseStorage', :modular_headers => true
-
+ 
   use_react_native!(
     :path => config[:reactNativePath],
-    # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
-
+ 
+  # Setup react-native-permissions
+  setup_permissions([
+    'Camera', 'PhotoLibrary', 'PhotoLibraryAddOnly', 'Notifications', 'MediaLibrary','Microphone','LocationAlways','LocationAccuracy','LocationWhenInUse'
+  ])
+ 
   post_install do |installer|
-    # https://github.com/facebook/react-native/blob/main/packages/react-native/scripts/react_native_pods.rb#L197-L202
     react_native_post_install(
       installer,
       config[:reactNativePath],
-      :mac_catalyst_enabled => false,
-      # :ccache_enabled => true
+      :mac_catalyst_enabled => false
     )
-
+  end
 end
-end
+ 
