--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,19 +1,18 @@
 
 use_frameworks! :linkage => :static
  
-# Resolve react_native_pods.rb with node to allow for hoisting
-require Pod::Executable.execute_command('node', ['-p',
-  'require.resolve(
-    "react-native/scripts/react_native_pods.rb",
-    {paths: [process.argv[1]]},
-  )', __dir__]).strip
- 
-# Require react-native-permissions setup script
-require Pod::Executable.execute_command('node', ['-p',
-  'require.resolve(
-    "react-native-permissions/scripts/setup.rb",
-    {paths: [process.argv[1]]},
-  )', __dir__]).strip
+def node_require(script)
+  # Resolve script with node to allow for hoisting
+  require Pod::Executable.execute_command('node', ['-p',
+    "require.resolve(
+     '#{script}',
+      {paths: [process.argv[1]]},
+   )", __dir__]).strip
+   end
+
+# Use it to require both react-native's and this package's scripts:
+ node_require('react-native/scripts/react_native_pods.rb')
+node_require('react-native-permissions/scripts/setup.rb')
  
 platform :ios, min_ios_version_supported
 project 'GroupTravel.xcodeproj'  # ✅ <-- Add this line
