--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-BASE_URL = http://162.215.253.89/dsdsfs
+BASE_URL = http://103.191.208.50/~gewlisca/gt1
 KEYSTORE_PASSWORD = patientappcm
 #API_URL = http://162.215.253.89/swastilife/api
 API_URL = http://103.191.208.50/~gewlisca/gt1/api
