--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -80,9 +80,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "com.travel.travelapp"
+    namespace "com.grouptour.travelapp"
     defaultConfig {
-        applicationId "com.travel.travelapp"
+        applicationId "com.grouptour.travelapp"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
