--- a/ios/GroupTravel/Info.plist
+++ b/ios/GroupTravel/Info.plist
@@ -44,7 +44,7 @@
 	<key>NSCameraUsageDescription</key>
 	<string>This app requires access to your camera capturing photos.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>This app needs location access to show nearby destinations.</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>This App needs access to your microphone to enable audio during audio calls so you can hear and be heard.</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
@@ -138,8 +138,10 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
+	</array>
+	<key>UISupportedInterfaceOrientations~ipad</key>
+	<array>
+		<string>UIInterfaceOrientationPortrait</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
