--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ GOOGLE_MAP_KEY = "AIzaSyDuEh7YRHqVSOE61it-oR3xdwr04hoUQ-M"
 #AIzaSyC8xqgDDmMXXlv52lqeclKHxj_DxvKVOMs
 RAZORPAY_KEY_ID = 'rzp_test_NevcVBpKqH5AA3' #development access
 RAZORPAY_KEY_SECRET = 'N3De1shLSswOXVMv0EWQD2vC' #development access
-#RAZORPAY_KEY_ID = 'rzp_live_oEErXWzWb9gqIR' #live access
-#RAZORPAY_KEY_SECRET = 'MY1TlZOAnL91XmV0BRoQthfO' #live access
+#RAZORPAY_KEY_ID = 'rzp_live_Ri1fbahnZqRiC7' #live access
+#RAZORPAY_KEY_SECRET = 'bRwwps6iMk5K15CWMF5fRb2y' #live access
 AGORA_APP_ID = '09997253a22045f28f6a73f22d6b4008' #development access
 #AGORA_APP_ID = '9a76c4f4ab4840ab8723799bfea63a96' #live access
