--- a/ios/GroupTravel/Info.plist
+++ b/ios/GroupTravel/Info.plist
@@ -1,182 +1,1 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<plist version="1.0">
-<dict>
-	<key>CFBundleDevelopmentRegion</key>
-	<string>en</string>
-	<key>CFBundleDisplayName</key>
-	<string>Group Tour</string>
-	<key>CFBundleExecutable</key>
-	<string>$(EXECUTABLE_NAME)</string>
-	<key>CFBundleIdentifier</key>
-	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
-	<key>CFBundleInfoDictionaryVersion</key>
-	<string>6.0</string>
-	<key>CFBundleName</key>
-	<string>$(PRODUCT_NAME)</string>
-	<key>CFBundlePackageType</key>
-	<string>APPL</string>
-	<key>CFBundleShortVersionString</key>
-	<string>1.0.12</string>
-	<key>CFBundleSignature</key>
-	<string>????</string>
-	<key>CFBundleVersion</key>
-	<string>11</string>
-	<key>LSApplicationQueriesSchemes</key>
-	<array>
-		<string>tez</string>
-		<string>phonepe</string>
-		<string>paytmmp</string>
-		<string>credpay</string>
-		<string>mobikwik</string>
-		<string>freecharge</string>
-		<string>in.fampay.app</string>
-		<string>bhim</string>
-		<string>amazonpay</string>
-		<string>navi</string>
-		<string>kiwi</string>
-		<string>payzapp</string>
-		<string>jupiter</string>
-		<string>omnicard</string>
-		<string>icici</string>
-		<string>popclubapp</string>
-		<string>sbiyono</string>
-		<string>myjio</string>
-		<string>slice</string>
-		<string>bobupi</string>
-		<string>shriramone</string>
-		<string>indusmobile</string>
-		<string>whatsapp</string>
-		<string>fbapi</string>
-		<string>fb-messenger-share-api</string>
-		<string>fbauth2</string>
-		<string>fbshareextension</string>
-	</array>
-	<key>LSRequiresIPhoneOS</key>
-	<true />
-	<key>NSAppTransportSecurity</key>
-	<dict>
-		<key>NSAllowsArbitraryLoads</key>
-		<true />
-		<key>NSExceptionDomains</key>
-		<dict>
-			<key>103.191.208.50</key>
-			<dict>
-				<key>NSExceptionAllowsInsecureHTTPLoads</key>
-				<true />
-				<key>NSExceptionRequiresForwardSecrecy</key>
-				<false />
-				<key>NSIncludesSubdomains</key>
-				<true />
-			</dict>
-		</dict>
-	</dict>
-	<key>NSCameraUsageDescription</key>
-	<string>Group Travel uses the camera to let users take profile pictures that are displayed in their account.</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>This app needs location access to show nearby destinations.</string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>This App needs access to your microphone to enable audio during audio calls so you can hear and be heard.</string>
-	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>This App needs to access your Photo Library to upload media.</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>This App needs to access your Photo Library to upload media.</string>
-	<key>NSUserNotificationUsageDescription</key>
-	<string>This App would like to send you notifications to keep you updated.</string>
-	<key>NSAppleMusicUsageDescription</key>
-	<string>This app requires access to your media library to manage and play audio content.</string>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>This app requires location access to show nearby destinations and improve your experience.</string>
-	<key>RCTNewArchEnabled</key>
-	<true />
-	<key>UIAppFonts</key>
-	<array>
-		<string>DMSans-Black.ttf</string>
-		<string>DMSans-BlackItalic.ttf</string>
-		<string>DMSans-Bold.ttf</string>
-		<string>DMSans-BoldItalic.ttf</string>
-		<string>DMSans-ExtraBold.ttf</string>
-		<string>DMSans-ExtraBoldItalic.ttf</string>
-		<string>DMSans-ExtraLight.ttf</string>
-		<string>DMSans-ExtraLightItalic.ttf</string>
-		<string>DMSans-Italic.ttf</string>
-		<string>DMSans-Light.ttf</string>
-		<string>DMSans-LightItalic.ttf</string>
-		<string>DMSans-Medium.ttf</string>
-		<string>DMSans-MediumItalic.ttf</string>
-		<string>DMSans-Regular.ttf</string>
-		<string>DMSans-SemiBold.ttf</string>
-		<string>DMSans-SemiBoldItalic.ttf</string>
-		<string>DMSans-Thin.ttf</string>
-		<string>DMSans-ThinItalic.ttf</string>
-		<string>Inter-Bold.ttf</string>
-		<string>Outfit-Black.ttf</string>
-		<string>Outfit-Bold.ttf</string>
-		<string>Outfit-ExtraBold.ttf</string>
-		<string>Outfit-ExtraLight.ttf</string>
-		<string>Outfit-Light.ttf</string>
-		<string>Outfit-Medium.ttf</string>
-		<string>Outfit-Regular.ttf</string>
-		<string>Outfit-SemiBold.ttf</string>
-		<string>Outfit-Thin.ttf</string>
-		<string>Poppins-Black.ttf</string>
-		<string>Poppins-BlackItalic.ttf</string>
-		<string>Poppins-Bold.ttf</string>
-		<string>Poppins-BoldItalic.ttf</string>
-		<string>Poppins-ExtraBold.ttf</string>
-		<string>Poppins-ExtraBoldItalic.ttf</string>
-		<string>Poppins-ExtraLight.ttf</string>
-		<string>Poppins-ExtraLightItalic.ttf</string>
-		<string>Poppins-Italic.ttf</string>
-		<string>Poppins-Light.ttf</string>
-		<string>Poppins-LightItalic.ttf</string>
-		<string>Poppins-Medium.ttf</string>
-		<string>Poppins-MediumItalic.ttf</string>
-		<string>Poppins-Regular.ttf</string>
-		<string>Poppins-SemiBold.ttf</string>
-		<string>Poppins-SemiBoldItalic.ttf</string>
-		<string>Poppins-Thin.ttf</string>
-		<string>Poppins-ThinItalic.ttf</string>
-		<string>AntDesign.ttf</string>
-		<string>Entypo.ttf</string>
-		<string>EvilIcons.ttf</string>
-		<string>Feather.ttf</string>
-		<string>FontAwesome.ttf</string>
-		<string>FontAwesome5_Brands.ttf</string>
-		<string>FontAwesome5_Regular.ttf</string>
-		<string>FontAwesome5_Solid.ttf</string>
-		<string>FontAwesome6_Brands.ttf</string>
-		<string>FontAwesome6_Regular.ttf</string>
-		<string>FontAwesome6_Solid.ttf</string>
-		<string>Fontisto.ttf</string>
-		<string>Foundation.ttf</string>
-		<string>Ionicons.ttf</string>
-		<string>MaterialCommunityIcons.ttf</string>
-		<string>MaterialIcons.ttf</string>
-		<string>Octicons.ttf</string>
-		<string>SimpleLineIcons.ttf</string>
-		<string>Zocial.ttf</string>
-	</array>
-	<key>UIBackgroundModes</key>
-	<array>
-		<string>fetch</string>
-		<string>remote-notification</string>
-	</array>
-	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
-	<key>UIRequiredDeviceCapabilities</key>
-	<array>
-		<string>arm64</string>
-	</array>
-	<key>UISupportedInterfaceOrientations</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-	</array>
-	<key>UISupportedInterfaceOrientations~ipad</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-	</array>
-	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<false />
-</dict>
-</plist>
+xxx
